--- a/_posts/2019-06-30-demo-post.md
+++ b/_posts/2019-06-30-demo-post.md
@@ -4,6 +4,8 @@ date: 2019-06-30 00:00:00
 description: This is a demo post that shows what you can do inside portfolio and blog posts. We’ve included everything you need to create engaging posts and case studies to show off your work in a beautiful way.
 featured_image: '/images/demo.jpg'
 accent_color: '#FF7898'
+tags:
+- formations-rgp
 ---
 
 This page is a demo that shows everything you can do inside portfolio and blog posts.
